--- a/src/Menu.css
+++ b/src/Menu.css
@@ -5,20 +5,24 @@
 
 .menu ul {
     list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
     padding: 0;
+    margin: 0;
 }
 
 .menu li {
-    display: inline;
-    margin: 0 15px;
+    margin: 0;
 }
 
-.menu a {
+.menu-icon {
     color: white;
+    font-size: 1.5em;
     text-decoration: none;
-    font-size: 1.2em;
+    transition: color 0.3s;
 }
 
-.menu a:hover {
-    text-decoration: underline;
+.menu-icon:hover {
+    color: #007bff;
 }
